--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@nuxt/content": "^2.7.2",
     "@nuxt/image-edge": "1.0.0-rc.1-28164352.ad7c010",
     "@tresjs/cientos": "3.0.1",
+    "@tresjs/leches": "^0.7.0",
     "@tresjs/nuxt": "1.1.3",
     "@types/three": "^0.154.0",
     "@unocss/nuxt": "^0.54.0",
