chore: deps update

--- a/package.json
+++ b/package.json
@@ -9,26 +9,27 @@
   },
   "devDependencies": {
     "@alvarosabu/prettier-config": "^1.3.0",
-    "@iconify-json/carbon": "^1.1.18",
-    "@iconify-json/game-icons": "^1.1.2",
-    "@iconify-json/ic": "^1.1.13",
-    "@iconify-json/logos": "^1.1.33",
+    "@iconify-json/carbon": "^1.1.20",
+    "@iconify-json/game-icons": "^1.1.3",
+    "@iconify-json/ic": "^1.1.14",
+    "@iconify-json/logos": "^1.1.34",
     "@nuxt/content": "^2.7.2",
-    "@nuxt/image-edge": "1.0.0-rc.1-28164352.ad7c010",
-    "@tresjs/cientos": "3.0.1",
+    "@nuxt/image-edge": "1.0.0-rc.1-28205905.cb96767",
+    "@tresjs/cientos": "3.1.0",
     "@tresjs/leches": "^0.7.0",
     "@tresjs/nuxt": "1.1.3",
-    "@types/three": "^0.154.0",
-    "@unocss/nuxt": "^0.54.0",
+    "@tweakpane/plugin-essentials": "^0.2.0",
+    "@types/three": "^0.155.1",
+    "@unocss/nuxt": "^0.55.2",
     "gsap": "^3.12.2",
     "nuxt": "^3.6.5",
     "nuxt-svgo": "^3.4.0",
-    "postprocessing": "^6.32.2",
+    "postprocessing": "^6.33.0",
     "vite-plugin-glsl": "^1.1.2",
     "vite-svg-loader": "^4.0.0"
   },
   "dependencies": {
-    "@tresjs/core": "^3.0.1",
+    "@tresjs/core": "^3.1.0",
     "@tresjs/post-processing": "^0.3.0",
     "three": "^0.155.0"
   }
