feat: new naming and dark mode

--- a/package.json
+++ b/package.json
@@ -21,20 +21,21 @@
     "@iconify-json/ic": "^1.1.17",
     "@iconify-json/logos": "^1.1.42",
     "@nuxt/content": "^2.10.0",
-    "@nuxt/image": "^1.1.0",
-    "@nuxt/image-edge": "1.1.0-28396365.97249ca",
+    "@nuxt/image": "^1.2.0",
+    "@nuxt/image-edge": "1.2.0-28417792.5fb7d0e",
+    "@nuxtjs/color-mode": "^3.3.2",
     "@tresjs/cientos": "3.7.0",
     "@tresjs/core": "3.6.0",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "0.15.0-next.1",
     "@tresjs/nuxt": "2.0.1",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.159.0",
-    "@unocss/nuxt": "^0.58.2",
+    "@types/three": "^0.160.0",
+    "@unocss/nuxt": "^0.58.3",
     "gsap": "^3.12.4",
-    "nuxt": "^3.9.0",
-    "nuxt-svgo": "^3.7.0",
-    "postprocessing": "^6.34.1",
+    "nuxt": "^3.9.1",
+    "nuxt-svgo": "^4.0.0",
+    "postprocessing": "6.34.1",
     "vite-svg-loader": "^5.1.0"
   }
 }
