--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
   },
   "dependencies": {
-    "@tresjs/post-processing": "^0.7.0",
+    "@tresjs/post-processing": "1.0.0-next.1",
     "mdast-util-to-string": "^4.0.0",
-    "three": "^0.160.0",
+    "three": "^0.167.0",
     "three-custom-shader-material": "^5.4.0",
     "unist-util-stringify-position": "^4.0.0"
   },
@@ -20,21 +20,21 @@
     "@iconify-json/game-icons": "^1.1.7",
     "@iconify-json/ic": "^1.1.17",
     "@iconify-json/logos": "^1.1.42",
-    "@nuxt/content": "^2.10.0",
+    "@nuxt/content": "^2.13.2",
     "@nuxt/image": "^1.2.0",
-    "@nuxt/image-edge": "1.2.0-28425033.0a5974b",
+    "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxtjs/color-mode": "^3.3.2",
-    "@tresjs/cientos": "3.9.0",
-    "@tresjs/core": "3.9.0",
+    "@tresjs/cientos": "4.0.0-rc.1",
+    "@tresjs/core": "4.2.2",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "0.15.0-next.1",
     "@tresjs/nuxt": "3.0.2",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.160.0",
-    "@unocss/nuxt": "^0.58.3",
+    "@types/three": "^0.167.0",
+    "@unocss/nuxt": "^0.61.5",
     "gsap": "^3.12.4",
-    "nuxt": "^3.9.1",
-    "nuxt-svgo": "^4.0.0",
+    "nuxt": "^3.12.4",
+    "nuxt-svgo": "^4.0.2",
     "postprocessing": "6.36.0",
     "vite-svg-loader": "^5.1.0"
   }
