--- a/package.json
+++ b/package.json
@@ -11,18 +11,19 @@
   "dependencies": {
     "@tresjs/post-processing": "1.0.0-next.1",
     "mdast-util-to-string": "^4.0.0",
-    "three": "^0.169.0",
-    "three-custom-shader-material": "^5.4.0",
+    "three": "^0.171.0",
+    "three-custom-shader-material": "^6.2.1",
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.1.27",
-    "@iconify-json/game-icons": "^1.1.7",
-    "@iconify-json/ic": "^1.1.17",
-    "@iconify-json/logos": "^1.1.42",
+    "@iconify-json/carbon": "^1.2.5",
+    "@iconify-json/game-icons": "^1.2.1",
+    "@iconify-json/ic": "^1.2.2",
+    "@iconify-json/logos": "^1.2.4",
     "@nuxt/content": "^2.13.4",
     "@nuxt/image": "^1.8.0",
     "@nuxt/image-edge": "1.3.0-28493895.369b747",
+    "@nuxt/kit": "^3.15.0",
     "@nuxtjs/color-mode": "^3.4.4",
     "@tresjs/cientos": "4.0.3",
     "@tresjs/core": "4.3.1",
@@ -30,11 +31,11 @@
     "@tresjs/leches": "0.15.0-next.1",
     "@tresjs/nuxt": "3.0.7",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.169.0",
-    "@unocss/nuxt": "^0.63.6",
+    "@types/three": "^0.171.0",
+    "@unocss/nuxt": "^0.65.3",
     "gsap": "^3.12.4",
-    "nuxt": "^3.13.0",
-    "nuxt-svgo": "^4.0.4",
+    "nuxt": "^3.15.0",
+    "nuxt-svgo": "^4.0.9",
     "postprocessing": "6.36.5",
     "vite-svg-loader": "^5.1.0"
   }
