--- a/package.json
+++ b/package.json
@@ -25,11 +25,11 @@
     "@nuxt/image-edge": "1.3.0-28493895.369b747",
     "@nuxt/kit": "^3.15.0",
     "@nuxtjs/color-mode": "^3.4.4",
-    "@tresjs/cientos": "4.0.3",
-    "@tresjs/core": "4.3.2",
+    "@tresjs/cientos": "^4.3.0",
+    "@tresjs/core": "4.3.3",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "0.15.0-next.1",
-    "@tresjs/nuxt": "3.0.7",
+    "@tresjs/nuxt": "3.0.8",
     "@tweakpane/plugin-essentials": "^0.2.1",
     "@types/three": "^0.171.0",
     "@unocss/nuxt": "^0.65.3",
