--- a/package.json
+++ b/package.json
@@ -9,34 +9,48 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
   },
   "dependencies": {
-    "@tresjs/post-processing": "1.0.0-next.1",
+    "@nuxt/eslint": "^1.2.0",
+    "@tresjs/post-processing": "2.3.1",
     "mdast-util-to-string": "^4.0.0",
-    "three": "^0.171.0",
-    "three-custom-shader-material": "^6.2.1",
+    "three": "^0.175.0",
+    "three-custom-shader-material": "^6.3.1",
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.5",
+    "@iconify-json/carbon": "^1.2.8",
     "@iconify-json/game-icons": "^1.2.1",
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/logos": "^1.2.4",
-    "@nuxt/content": "^2.13.4",
-    "@nuxt/image": "^1.8.0",
-    "@nuxt/image-edge": "1.3.0-28493895.369b747",
-    "@nuxt/kit": "^3.15.0",
-    "@nuxtjs/color-mode": "^3.4.4",
-    "@tresjs/cientos": "4.2.0",
+    "@nuxt/content": "^3.4.0",
+    "@nuxt/fonts": "0.11.0",
+    "@nuxt/icon": "1.11.0",
+    "@nuxt/image": "^1.10.0",
+    "@nuxt/kit": "^3.16.1",
+    "@nuxt/ui": "^3.0.2",
+    "@nuxtjs/color-mode": "^3.5.2",
+    "@tresjs/cientos": "4.3.0",
     "@tresjs/core": "4.3.3",
     "@tresjs/eslint-config-vue": "^0.2.1",
-    "@tresjs/leches": "0.15.0-next.1",
+    "@tresjs/leches": "0.14.1",
     "@tresjs/nuxt": "3.0.8",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.171.0",
-    "@unocss/nuxt": "^0.65.3",
-    "gsap": "^3.12.4",
-    "nuxt": "^3.15.0",
-    "nuxt-svgo": "^4.0.9",
-    "postprocessing": "6.37.1",
+    "@types/three": "^0.175.0",
+    "gsap": "^3.12.7",
+    "nuxt": "^3.16.1",
+    "nuxt-svgo": "^4.0.16",
+    "postprocessing": "6.37.2",
     "vite-svg-loader": "^5.1.0"
+  },
+  "pnpm": {
+    "ignoredBuiltDependencies": [
+      "@parcel/watcher",
+      "better-sqlite3",
+      "esbuild",
+      "sharp",
+      "vue-demi"
+    ],
+    "onlyBuiltDependencies": [
+      "better-sqlite3"
+    ]
   }
 }
