--- a/package.json
+++ b/package.json
@@ -28,8 +28,8 @@
     "@nuxt/kit": "^3.16.1",
     "@nuxt/ui": "^3.0.2",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "4.3.0",
-    "@tresjs/core": "4.3.3",
+    "@tresjs/cientos": "https://pkg.pr.new/@tresjs/cientos@4fe342a",
+    "@tresjs/core": "5.0.0-next.0",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "0.14.1",
     "@tresjs/nuxt": "3.0.8",
