--- a/package.json
+++ b/package.json
@@ -9,36 +9,36 @@
     "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.2.0",
-    "@tresjs/post-processing": "2.3.1",
+    "@nuxt/eslint": "^1.4.1",
+    "@tresjs/post-processing": "https://pkg.pr.new/@tresjs/post-processing@49c44b0",
     "mdast-util-to-string": "^4.0.0",
-    "three": "^0.175.0",
-    "three-custom-shader-material": "^6.3.1",
+    "three": "^0.177.0",
+    "three-custom-shader-material": "^6.3.7",
     "unist-util-stringify-position": "^4.0.0"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.8",
-    "@iconify-json/game-icons": "^1.2.1",
+    "@iconify-json/carbon": "^1.2.9",
+    "@iconify-json/game-icons": "^1.2.3",
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/logos": "^1.2.4",
-    "@nuxt/content": "^3.4.0",
-    "@nuxt/fonts": "0.11.0",
-    "@nuxt/icon": "1.11.0",
+    "@nuxt/content": "^3.6.0",
+    "@nuxt/fonts": "0.11.4",
+    "@nuxt/icon": "1.13.0",
     "@nuxt/image": "^1.10.0",
-    "@nuxt/kit": "^3.16.1",
-    "@nuxt/ui": "^3.0.2",
+    "@nuxt/kit": "^3.17.5",
+    "@nuxt/ui": "^3.1.3",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "https://pkg.pr.new/@tresjs/cientos@4fe342a",
-    "@tresjs/core": "5.0.0-next.0",
+    "@tresjs/cientos": "5.0.0-next.2",
+    "@tresjs/core": "5.0.0-next.3",
     "@tresjs/eslint-config-vue": "^0.2.1",
-    "@tresjs/leches": "0.14.1",
-    "@tresjs/nuxt": "3.0.8",
+    "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@5536ad5",
+    "@tresjs/nuxt": "https://pkg.pr.new/@tresjs/nuxt@59b56e4",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.175.0",
-    "gsap": "^3.12.7",
-    "nuxt": "^3.16.1",
-    "nuxt-svgo": "^4.0.16",
-    "postprocessing": "6.37.2",
+    "@types/three": "^0.177.0",
+    "gsap": "^3.13.0",
+    "nuxt": "^3.17.5",
+    "nuxt-svgo": "^4.2.2",
+    "postprocessing": "6.37.4",
     "vite-svg-loader": "^5.1.0"
   },
   "pnpm": {
@@ -50,7 +50,9 @@
       "vue-demi"
     ],
     "onlyBuiltDependencies": [
-      "better-sqlite3"
+      "@tailwindcss/oxide",
+      "better-sqlite3",
+      "unrs-resolver"
     ]
   }
 }
