--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
+    "@nuxt/ui-pro": "^3.1.3",
     "@tresjs/post-processing": "https://pkg.pr.new/@tresjs/post-processing@49c44b0",
     "mdast-util-to-string": "^4.0.0",
     "three": "^0.177.0",
