--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
     "@nuxt/ui-pro": "^3.1.3",
-    "@tresjs/post-processing": "https://pkg.pr.new/@tresjs/post-processing@49c44b0",
+    "@tresjs/post-processing": "3.0.0-next.0",
     "mdast-util-to-string": "^4.0.0",
     "three": "^0.177.0",
     "three-custom-shader-material": "^6.3.7",
@@ -29,8 +29,8 @@
     "@nuxt/kit": "^3.17.5",
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "5.0.0-next.2",
-    "@tresjs/core": "5.0.0-next.5",
+    "@tresjs/cientos": "5.0.0-next.3",
+    "@tresjs/core": "5.0.0-next.6",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@5536ad5",
     "@tresjs/nuxt": "https://pkg.pr.new/@tresjs/nuxt@59b56e4",
