feat: update repulsion effect component and enhance documentation
- Refactored the `index.vue` and `scene.vue` files for the Repulsion Effect component to improve structure and performance, including the removal of unnecessary variables and the use of TypeScript for type safety.
- Simplified the geometry and material handling by utilizing a geometry map and a shared material for better maintainability.
- Updated the linting command in `package.json` to streamline the linting process.
- Added a new markdown file and image for the Repulsion Effect experiment to enhance documentation and provide context for the scene.

These changes improve the overall performance, maintainability, and documentation of the Repulsion Effect component.

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "generate": "nuxt generate",
     "preview": "nuxt preview",
     "postinstall": "nuxt prepare",
-    "lint": "eslint . --ext .js,.jsx,.ts,.tsx,.vue"
+    "lint": "eslint ."
   },
   "dependencies": {
     "@nuxt/eslint": "^1.4.1",
