chore: update package dependencies and improve markdown tags
- Removed ignored built dependencies from `package.json` and added an override for `ipx` to version `^3.0.3`.
- Updated `pnpm-lock.yaml` to reflect the new dependency versions, including `sharp` and `ipx`.
- Corrected markdown tags in `dancing-blob.md` and `synthwave-landscape.md` for consistency, changing 'shader' to 'shaders'.

These changes enhance dependency management and improve documentation clarity.

--- a/package.json
+++ b/package.json
@@ -43,17 +43,11 @@
     "vite-svg-loader": "^5.1.0"
   },
   "pnpm": {
-    "ignoredBuiltDependencies": [
-      "@parcel/watcher",
-      "better-sqlite3",
-      "esbuild",
-      "sharp",
-      "vue-demi"
-    ],
     "onlyBuiltDependencies": [
-      "@tailwindcss/oxide",
-      "better-sqlite3",
-      "unrs-resolver"
-    ]
+      "better-sqlite3"
+    ],
+    "overrides": {
+      "ipx": "^3.0.3"
+    }
   }
 }
