--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
-  command = "pnpm run generate"
-  publish = ".output/public"
+  command = "pnpm run generate -- --max-old-space-size=4096"
+  publish = "dist"
 
 [build.environment]
 COREPACK_INTEGRITY_KEYS = "0"
