chore: update Netlify build configuration for output directory
- Changed the publish directory in `netlify.toml` from `dist` to `.output/public` to align with the updated build output structure.
- Retained the memory allocation setting in the build command for improved performance during static site generation.

This adjustment ensures the deployment process is consistent with the latest build configurations.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,6 +1,6 @@
 [build]
   command = "pnpm run generate -- --max-old-space-size=4096"
-  publish = "dist"
+  publish = ".output/public"
 
 [build.environment]
 COREPACK_INTEGRITY_KEYS = "0"
