chore: simplify Netlify build command in configuration
- Removed the memory allocation setting `--max-old-space-size=4096` from the build command in `netlify.toml` to streamline the build process.
- This change aligns with the current requirements and simplifies the deployment configuration.

--- a/netlify.toml
+++ b/netlify.toml
@@ -1,5 +1,5 @@
 [build]
-  command = "pnpm run generate -- --max-old-space-size=4096"
+  command = "pnpm run generate"
 
 [build.environment]
 COREPACK_INTEGRITY_KEYS = "0"
