--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
     "@nuxt/kit": "^4.0.1",
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "5.0.0-next.4",
+    "@tresjs/cientos": "https://pkg.pr.new/@tresjs/cientos@cc4d058",
     "@tresjs/core": "5.0.0-next.6",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@f356fed",
