--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@nuxt/eslint": "^1.7.1",
     "@nuxt/ui-pro": "^3.3.0",
     "@tresjs/post-processing": "3.0.0-next.0",
+    "@vueuse/nuxt": "^13.8.0",
     "better-sqlite3": "^11.7.0",
     "mdast-util-to-string": "^4.0.0",
     "three": "^0.178.0",
     "three-custom-shader-material": "^6.3.7",
-    "unist-util-stringify-position": "^4.0.0"
+    "unist-util-stringify-position": "^4.0.0",
+    "vue": "^3.5.20"
   },
   "devDependencies": {
     "@iconify-json/carbon": "^1.2.11",
@@ -30,8 +32,8 @@
     "@nuxt/kit": "^4.0.1",
     "@nuxt/ui": "^3.1.3",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "5.0.0-next.4",
-    "@tresjs/core": "5.0.0-next.6",
+    "@tresjs/cientos": "5.0.0-alpha.0",
+    "@tresjs/core": "5.0.0-alpha.1",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@f356fed",
     "@tresjs/nuxt": "4.1.0-next.1",
