feat: add lucide icon set to dependencies in package.json and pnpm-lock.yaml

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@iconify-json/game-icons": "^1.2.3",
     "@iconify-json/ic": "^1.2.2",
     "@iconify-json/logos": "^1.2.5",
+    "@iconify-json/lucide": "^1.2.66",
     "@nuxt/content": "^3.6.3",
     "@nuxt/fonts": "0.11.4",
     "@nuxt/icon": "1.15.0",
