chore: update dependencies in package.json and pnpm-lock.yaml
- Bump versions of several dependencies including @nuxt/eslint, @nuxt/ui-pro, @vueuse/nuxt, better-sqlite3, three, and vue to their latest stable releases.
- Update devDependencies for @iconify-json packages, @nuxt/content, @nuxt/icon, @nuxt/image, @nuxt/kit, and @tresjs packages to ensure compatibility and improvements.
- Adjusted the version of vite and related packages to enhance build performance and stability.
- Cleaned up outdated package references and ensured all dependencies are aligned with the latest versions for better project maintenance.

--- a/package.json
+++ b/package.json
@@ -9,41 +9,40 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@nuxt/eslint": "^1.7.1",
-    "@nuxt/ui-pro": "^3.3.0",
+    "@nuxt/eslint": "^1.9.0",
+    "@nuxt/ui-pro": "^3.3.4",
     "@tresjs/post-processing": "3.0.0-next.0",
-    "@vueuse/nuxt": "^13.8.0",
-    "better-sqlite3": "^11.7.0",
+    "@vueuse/nuxt": "^13.9.0",
+    "better-sqlite3": "^12.2.0",
     "mdast-util-to-string": "^4.0.0",
-    "three": "^0.178.0",
+    "three": "^0.180.0",
     "three-custom-shader-material": "^6.3.7",
     "unist-util-stringify-position": "^4.0.0",
-    "vue": "^3.5.20"
+    "vue": "^3.5.21"
   },
   "devDependencies": {
-    "@iconify-json/carbon": "^1.2.11",
+    "@iconify-json/carbon": "^1.2.13",
     "@iconify-json/game-icons": "^1.2.3",
-    "@iconify-json/ic": "^1.2.2",
-    "@iconify-json/logos": "^1.2.5",
-    "@iconify-json/lucide": "^1.2.66",
-    "@nuxt/content": "^3.6.3",
+    "@iconify-json/ic": "^1.2.4",
+    "@iconify-json/logos": "^1.2.9",
+    "@iconify-json/lucide": "^1.2.68",
+    "@nuxt/content": "^3.7.1",
     "@nuxt/fonts": "0.11.4",
-    "@nuxt/icon": "1.15.0",
-    "@nuxt/image": "^1.10.0",
-    "@nuxt/kit": "^4.0.1",
-    "@nuxt/ui": "^3.1.3",
+    "@nuxt/icon": "2.0.0",
+    "@nuxt/image": "^1.11.0",
+    "@nuxt/kit": "^4.1.2",
+    "@nuxt/ui": "^3.3.4",
     "@nuxtjs/color-mode": "^3.5.2",
-    "@tresjs/cientos": "5.0.0-alpha.0",
-    "@tresjs/core": "5.0.0-alpha.1",
+    "@tresjs/cientos": "5.0.0",
     "@tresjs/eslint-config-vue": "^0.2.1",
     "@tresjs/leches": "https://pkg.pr.new/@tresjs/leches@f356fed",
-    "@tresjs/nuxt": "4.1.0-next.1",
+    "@tresjs/nuxt": "5.0.0",
     "@tweakpane/plugin-essentials": "^0.2.1",
-    "@types/three": "^0.178.1",
+    "@types/three": "^0.180.0",
     "gsap": "^3.13.0",
-    "nuxt": "^4.0.1",
-    "nuxt-svgo": "^4.2.4",
-    "postprocessing": "6.37.6",
+    "nuxt": "^4.1.2",
+    "nuxt-svgo": "^4.2.6",
+    "postprocessing": "6.37.8",
     "vite-svg-loader": "^5.1.0"
   },
   "pnpm": {
